--- a/wsgiadmin/templates/login.html
+++ b/wsgiadmin/templates/login.html
@@ -14,8 +14,8 @@
     </div>
     <div class="row">
         <div class="span6 offset2 center">
-            <a href="{% url registration %}">{% trans "Registration" %}</a> |
-            <a href="{% url reset_passwd %}">{% trans "Lost password" %}</a>
+            <a href="{% url 'registration' %}">{% trans "Registration" %}</a> |
+            <a href="{% url 'reset_passwd' %}">{% trans "Lost password" %}</a>
         </div>
     </div>
 {% endblock %}
