--- a/wsgiadmin/templates/passwd_form.html
+++ b/wsgiadmin/templates/passwd_form.html
@@ -10,8 +10,8 @@
     </div>
     <div class="row">
         <div class="span6 offset2 center">
-            <a href="{% url login %}">{% trans "Go to login page" %}</a> |
-            <a href="{% url registration %}">{% trans "Registration" %}</a>
+            <a href="{% url 'login' %}">{% trans "Go to login page" %}</a> |
+            <a href="{% url 'registration' %}">{% trans "Registration" %}</a>
         </div>
     </div>
 {% endblock %}
