--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -41,20 +41,20 @@
         <tr>
             <td colspan="2">
                 {% if app.app_type == "python" or app.app_type == "native" %}
-                    <a href="{% url app_restart %}?app_id={{ app.id }}" class="btn btn-primary"><i class="icon-refresh icon-white"></i> {% trans "Restart" %}</a>
+                    <a href="{% url 'app_restart' %}?app_id={{ app.id }}" class="btn btn-primary"><i class="icon-refresh icon-white"></i> {% trans "Restart" %}</a>
                 {% endif %}
                 {% if app.app_type == "static" %}
-                    <a href="{% url app_params_static app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
+                    <a href="{% url 'app_params_static' app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
                 {% elif app.app_type == "php" %}
-                    <a href="{% url app_params_php app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
+                    <a href="{% url 'app_params_php' app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
                 {% elif app.app_type == "python" %}
-                    <a href="{% url app_params_python app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
+                    <a href="{% url 'app_params_python' app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
                 {% elif app.app_type == "native" %}
-                    <a href="{% url app_params_native app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
+                    <a href="{% url 'app_params_native' app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
                 {% elif app.app_type == "proxy" %}
-                    <a href="{% url app_params_proxy app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
+                    <a href="{% url 'app_params_proxy' app_id=app.id %}" class="btn btn-warning"><i class="icon-edit icon-white"></i> {% trans "Parameters" %}</a>
                 {% endif %}
-                <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url app_rm %}?app_id={{ app.id }}';}" class="btn btn-danger"><i class="icon-remove icon-white"></i> {% trans "Delete" %}</a>
+                <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url 'app_rm' %}?app_id={{ app.id }}';}" class="btn btn-danger"><i class="icon-remove icon-white"></i> {% trans "Delete" %}</a>
             </td>
         </tr>
         <tr>
@@ -72,7 +72,7 @@
     <h2>{% trans "Databases" %}</h2>
 
     {% if dbs %}
-    <p><a href="{% url db_add %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
+    <p><a href="{% url 'db_add' %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
     <table class="table table-striped">
         <tr>
             <th>{% trans "Name" %}</th>
@@ -84,14 +84,14 @@
             <td>{{ db.name }}</td>
             <td>{{ db.comment }}</td>
             <td>
-                <a href="{% url db_update pk=db.id %}" class="btn btn-small">{% trans "Update" %}</a>
-                <a href="#a" class="btn btn-danger btn-small" onclick="if(confirm('{% trans "Are you sure?" %}')){ document.location='{% url db_rm %}?db_id={{ db.id }}'; }">{% trans "Delete" %}</a>
+                <a href="{% url 'db_update' pk=db.id %}" class="btn btn-small">{% trans "Update" %}</a>
+                <a href="#a" class="btn btn-danger btn-small" onclick="if(confirm('{% trans "Are you sure?" %}')){ document.location='{% url 'db_rm' %}?db_id={{ db.id }}'; }">{% trans "Delete" %}</a>
             </td>
         </tr>
         {% endfor %}
     </table>
     {% else %}
-        <p><a href="{% url db_add %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
+        <p><a href="{% url 'db_add' %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
     {% endif %}
 
     <h2>{% trans "Log files" %}</h2>
