--- a/wsgiadmin/templates/cron.html
+++ b/wsgiadmin/templates/cron.html
@@ -29,7 +29,7 @@
         <td>{{ cron.script }}</td>
         <td class="list_actions">
             <ul class="akce">
-                <li><a href="{% url update_cron pk=cron.id %}" title="{% trans "Edit" %}">
+                <li><a href="{% url 'update_cron' pk=cron.id %}" title="{% trans "Edit" %}">
                     <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
                     </a></li>
                 <li class="smazat"><a href="#" id="remove_{{ cron.id }}" rel="{{ cron.id }}" class="bold object_delete" title="{% trans "Delete" %}">
