--- a/wsgiadmin/templates/old/db.html
+++ b/wsgiadmin/templates/old/db.html
@@ -23,7 +23,7 @@
                     <td>{{ db }}</td>
                     <td id="db_{{ db }}">
                         <ul class="akce">
-                        <li><a href="{% url db_passwd dbtype=dbtype dbname=db.dbname %}" class="db_pwdchange" title="{% trans "Change password" %}">
+                        <li><a href="{% url 'db_passwd' dbtype=dbtype dbname=db.dbname %}" class="db_pwdchange" title="{% trans "Change password" %}">
                             <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
                         </a></li>
                         <li class="smazat"><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ db.id }}">
