--- a/wsgiadmin/templates/old/subdomains.html
+++ b/wsgiadmin/templates/old/subdomains.html
@@ -8,16 +8,16 @@
 {% block extra %}
     <script type="text/javascript">
     function rem(subdomain_id){
-        $("#subdomains").load("{% url subdomains_list domain.id %}?subdomain_id="+subdomain_id);
+        $("#subdomains").load("{% url 'subdomains_list' domain.id %}?subdomain_id="+subdomain_id);
     }
 
     function add(){
-        $("#subdomains").load("{% url subdomains_list domain.id %}?subdomain_name="+$("#subdomain").val());
+        $("#subdomains").load("{% url 'subdomains_list' domain.id %}?subdomain_name="+$("#subdomain").val());
         $("#subdomain").val("");
     }
 
     function load(){
-        $("#subdomains").load("{% url subdomains_list domain.id %}");
+        $("#subdomains").load("{% url 'subdomains_list' domain.id %}");
     }
 
     $(document).ready(function (){
