--- a/wsgiadmin/templates/stats/payment_infopage.html
+++ b/wsgiadmin/templates/stats/payment_infopage.html
@@ -38,7 +38,7 @@
             <th>{% trans "Address at invoice" %}</th>
             <td>
                 {% if not credit.date_payed %}
-                    <form action="{% url payment_address %}" method="post">
+                    <form action="{% url 'payment_address' %}" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="credit_id" value="{{ credit.id }}">
                         <select name="address_id">
@@ -48,7 +48,7 @@
                         </select><br>
                         <input type="submit" value="{% trans "Change address" %}" class="btn">
                     </form>
-                    <a href="{% url address_create %}">{% trans "Add new address" %}</a>
+                    <a href="{% url 'address_create' %}">{% trans "Add new address" %}</a>
                 {% else %}
                     {{ credit.address }}, {{ credit.address.street }}, {{ credit.address.zip }} {{ credit.address.city }}
                 {% endif %}
@@ -67,10 +67,10 @@
     <br>
     {% if not credit.gopay_payment %}
         <p>{% trans "If you prefer fast and simple payments, use GoPay and pay with credit card or other quick methods." %}</p>
-        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-success btn-large">{% trans "Pay with GoPay" %}</a></p>
+        <p><a href="{% url 'payment_gopay' %}?credit_id={{ credit.id }}" class="btn btn-success btn-large">{% trans "Pay with GoPay" %}</a></p>
     {% else %}
         <p>It looks like you have already try make a payment via GoPay. If your attempt failed, let's try it again.</p>
-        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-success btn-large">{% trans "Try again with GoPay" %}</a></p>
+        <p><a href="{% url 'payment_gopay' %}?credit_id={{ credit.id }}" class="btn btn-success btn-large">{% trans "Try again with GoPay" %}</a></p>
     {% endif %}
     {% endif %}
 
