App depended DB server migration, php-fpm support

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -170,7 +170,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'app_static' app_type='php' %}">
+                            <a href="{% url 'app_static' app_type='phpfpm' %}">
                                 <i class="icon-plus"></i>
                                 {% trans "Add PHP app" %}</a>
                         </li>
