Fixies, pgsql/mysql server capability (not in apps yet)

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -201,7 +201,7 @@
                             <a href="{% url 'app_add_static' %}"><i class="icon-plus"></i> {% trans "Add static app" %}</a>
                         </li>
                         <li>
-                            <a href="{% url 'app_add_phpfpm' %}"><i class="icon-plus"></i> {% trans "Add php app" %}</a>
+                            <a href="{% url 'app_add_php' %}"><i class="icon-plus"></i> {% trans "Add php app" %}</a>
                         </li>
                         <li>
                             <a href="{% url 'app_add_python' %}"><i class="icon-plus"></i> {% trans "Add python app" %}</a>
