Apps backend fix, locale_paths fix, hide virtual server, print server domain fix in apps

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -49,9 +49,11 @@
                         <li {% if menu_active == "apps" %} class="active"{% endif %}>
                             <a href="{% url 'apps_list' %}">{% trans "Apps" %}</a>
                         </li>
+                        {% if superuser.is_superuser %}
                         <li {% if menu_active == "virt" %} class="active"{% endif %}>
                             <a href="{% url 'virt_list' %}">{% trans "VM" %}</a>
                         </li>
+                        {% endif %}
                         {% if user.mysqldb_set.count or user.pgsql_set.count %}
                             <li{% if menu_active == "dbs" %} class="active"{% endif %}>
                                 <a href="{% url 'db_list' %}">{% trans "Databases" %}</a>
