--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <th>{% trans "Server" %}</th>
-            <td>{{ app.server.hostname }}</td>
+            <td>{{ app.core_server.domain }}</td>
         </tr>
         <tr>
             <th>{% trans "Stav" %}</th>
