Kill old webapps add link, old apps load balancer support

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -164,7 +164,7 @@
                                 <i class="icon-list"></i>
                                 {% trans "Your apps" %}</a>
                         </li>
-                        <li class="divider"></li>
+                        <!--<li class="divider"></li>
                         <li>
                             <a href="{% url 'app_static' app_type='static' %}">
                                 <i class="icon-plus"></i>
@@ -180,7 +180,7 @@
                             <a href="{% url 'app_wsgi' %}">
                                 <i class="icon-plus"></i>
                                 {% trans "Add WSGI app" %}</a>
-                        </li>
+                        </li>-->
                         <li class="divider"></li>
                         <li>
                             <a href="{% url 'cron_list' %}">
