--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <th>{% trans "Server" %}</th>
-            <td>{{ app.core_server.domain }}</td>
+            <td>{{ app.core_server.domain }} ({{ app.core_server.ip }}) - {% trans "Use it for SSH/SFTP/FTP access" %}</td>
         </tr>
         <tr>
             <th>{% trans "Stav" %}</th>
