--- a/wsgiadmin/templates/apps/app_info.html
+++ b/wsgiadmin/templates/apps/app_info.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <th>{% trans "FTP/SFTP" %}</th>
-            <td>{% trans "Host" %}: {{ app.server.domain }} / {% trans "User" %}: {{ app.get_user }}</td>
+            <td>{% trans "Host" %}: {{ app.core_server.domain }} / {% trans "User" %}: {{ app.get_user }}</td>
         </tr>
         <tr>
             <th>{% trans "Domains" %}</th>
@@ -28,8 +28,12 @@
             <td>{{ app.app_type }}</td>
         </tr>
         <tr>
-            <th>{% trans "Server" %}</th>
-            <td>{{ app.core_server.domain }} ({{ app.core_server.ip }}) - {% trans "Use it for SSH/SFTP/FTP access" %}</td>
+            <th>{% trans "Server domain and IP" %}</th>
+            <td>
+                {{ app.core_server.domain }}
+                {% if app.core_server.ip %}/ {{ app.core_server.ip }}{% endif %}
+                {% if app.core_server.ipv6 %}/ {{ app.core_server.ipv6 }}{% endif %}
+                <em>{% trans "DNS settings, SSH, SFTP, FTP, etc." %}</em></td>
         </tr>
         <tr>
             <th>{% trans "Stav" %}</th>
